[gd_scene load_steps=5 format=3 uid="uid://b7m0qjkg5vwqk"]

[ext_resource type="Script" uid="uid://ctwklt7hxahqr" path="res://config_file/Exemplo1/exemplo_config.gd" id="1_pdfkc"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_pdfkc"]

[sub_resource type="Sky" id="Sky_tvswo"]
sky_material = SubResource("ProceduralSkyMaterial_pdfkc")

[sub_resource type="Environment" id="Environment_p431d"]
sky = SubResource("Sky_tvswo")
ambient_light_source = 3

[node name="Exemplo-config" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25
script = ExtResource("1_pdfkc")

[node name="_" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 36

[node name="_" type="GridContainer" parent="_"]
layout_mode = 2
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 15
columns = 2

[node name="NomeLabel" type="Label" parent="_/_"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Nome:"

[node name="NomeLineEdit" type="LineEdit" parent="_/_"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 2
theme_override_font_sizes/font_size = 36

[node name="VidaLabel" type="Label" parent="_/_"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Vida:"

[node name="VidaLineEdit" type="LineEdit" parent="_/_"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 2
theme_override_font_sizes/font_size = 36

[node name="Ataque" type="Label" parent="_/_"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Ataque:"

[node name="AtaqueLineEdit" type="LineEdit" parent="_/_"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 2
theme_override_font_sizes/font_size = 36

[node name="Opcoes" type="HBoxContainer" parent="_"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Carregar" type="Button" parent="_/Opcoes"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Carregar"

[node name="Salvar" type="Button" parent="_/Opcoes"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Salvar"

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_p431d")

[connection signal="pressed" from="_/Opcoes/Carregar" to="." method="_on_carregar_pressed"]
[connection signal="pressed" from="_/Opcoes/Salvar" to="." method="_on_salvar_pressed"]
